HW_Kubernetes/14/canary/nginx1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-v1
  template:
    metadata:
      labels:
        app: nginx-v1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: configmap1
          mountPath: /usr/share/nginx/html
      volumes:
      - name: configmap1
        configMap:
          name: configmap1
---
apiVersion: v1
kind: Service
metadata:
  name: service-v1
spec:
  selector:
    app: nginx-v1
  ports:
  - name: ports
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
