HW_Kubernetes/14/canary/nginx2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-v2
  template:
    metadata:
      labels:
        app: nginx-v2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: configmap2
          mountPath: /usr/share/nginx/html
      volumes:
      - name: configmap2
        configMap:
          name: configmap2
---
apiVersion: v1
kind: Service
metadata:
  name: service-v2
spec:
  selector:
    app: nginx-v2
  ports:
  - name: ports
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
