HW_Kubernetes/14/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-new
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Irkutsk" 
    nginx.ingress.kubernetes.io/canary-by-header-pattern: "bratsk"
spec:
  ingressClassName: nginx
  rules:
    - host: nikita-tourk.ru
      http:
        paths:
        - pathType: Prefix
          path: / 
          backend:
            service:
              name: service-v2
              port:
                number: 80
