HW_Kubernetes/14/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-v1
spec:
  ingressClassName: nginx
  rules:
    - host: nikita-tourk.ru
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: service-v1
              port:
                number: 80
